--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -10,7 +10,7 @@
         <div class="content-wrapper">
             <div class="row align-items-center">
                 <!-- Columna Izquierda -->
-                <div class="col-md-4 text-start px-5 py-5">
+                <div class="col-12 col-md-4 text-start px-5 py-5">
                     <img src="{% static 'images/Kiko_Amarillo_CARA.jpg' %}" alt="José Francisco González Amarillo" class="rounded-circle profile-image mb-3">
                     <div class="ubicacion-container d-flex align-items-center justify-content-center">
                         <div class="ubicacion">
@@ -24,7 +24,7 @@
                 </div>
 
                 <!-- Columna Derecha -->
-                <div class="col-md-8 d-flex flex-column justify-content-center align-items-end text-end px-5">
+                <div class="col-12 col-md-8 d-flex flex-column justify-content-center align-items-end text-end px-5">
                     <h1 class="nombre-completo">
                         <span id="dynamic-name" class="writing"></span><span id="cursor">|</span><br>
                         González Amarillo
@@ -85,7 +85,7 @@
                 </div>
 
                 <!-- Columna Derecha: Contenido -->
-                <div class="col-md-7">
+                <div class="col-md-7 roboto-regular">
                     <h2 class="russo-one-regular text-danger">Sobre mí</h2>
                     <p>
                         ¡Muy buenas! Presentándose un desarrollador de software con experiencia principalmente en <strong>Python</strong> junto a sus frameworks <strong>Django, Flask</strong> y (aprendiendo) <strong>FastAPI</strong> entre otros.
@@ -114,7 +114,7 @@
 
 
     <!-- Sección: PROYECTOS -->
-    <section id="proyectos" class="py-5 mt-5">
+    <section id="proyectos" class="py-5 mt-5 roboto-regular">
         <div class="container">
             <h2 class="text-center russo-one-regular py-3 mt-5">Proyectos Principales</h2>
 
@@ -230,7 +230,7 @@
 
 
     <!-- Sección: CONOCIMIENTOS -->
-    <section id="conocimientos-timeline" class="py-5 mt-5 pt-5">
+    <section id="conocimientos-timeline" class="py-5 mt-5 pt-5 roboto-regular">
         <h2 class="h2 text-center russo-one-regular py-5 mt-5 mb-5">Conocimientos</h2>
         <div class="container position-relative py-5">
 
@@ -330,7 +330,7 @@
 
 
     <!-- Sección: CONTACTO -->
-    <section id="contacto" class="py-5">
+    <section id="contacto" class="py-5 roboto-regular">
         <div class="container contact-page py-5">
             <h1 class="text-center russo-one-regular mb-4">Contacto</h1>
 
