--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -18,7 +18,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Russo+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body class="loader d-flex flex-column min-vh-100">
@@ -87,7 +87,7 @@
         </div>
 
         <!-- Texto e iconos alineados -->
-        <div class="footer-info d-flex flex-column align-items-end text-end markazi-text">
+        <div class="footer-info d-flex flex-column align-items-end text-end roboto-regular">
             <p class="mb-2">&copy; 2024 KikolasDEV by José Francisco González Amarillo</p>
             <div class="d-flex align-items-center pt-1">
                 <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank" class="me-2">
