--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -88,15 +88,15 @@
                 <div class="col-md-7 roboto-regular">
                     <h2 class="russo-one-regular text-danger">Sobre mí</h2>
                     <p>
-                        ¡Muy buenas! Presentándose un desarrollador de software con experiencia principalmente en <strong>Python</strong> junto a sus frameworks <strong>Django, Flask</strong> y (aprendiendo) <strong>FastAPI</strong> entre otros.
+                        ¡Muy buenas! Presentándose un desarrollador de software con experiencia principalmente en <strong>Python</strong> y sus frameworks <strong>Django, Flask</strong> y (aprendiendo) <strong>FastAPI</strong>, entre otros.
                         Reconozco que, en principio, mi intención era ser puro backend developer, pero poco a poco me voy familiarizando y cada vez cogiéndole más el gusto a la programación frontend, de ahí que quiera ser <strong>FullStack</strong>.
                     </p>
                     <p>
-                        Actualmente mi foco está en mejorar, mejorar y, una vez más, <strong>mejorar</strong> como desarrollador. Poco a poco estoy programando proyectos, a la vez que haciendo retos/challenges para así consolidar y demostrar(me) lo que soy capaz de hacer,
-                        todo esto mientras sigo ampliando conocimientos sobre más tecnologías para aumentar mi <strong>trayecto profesional</strong> y mejorar mi perspectiva y mi experiencia.
+                        Actualmente mi enfoque está en mejorar, mejorar y, una vez más, <strong>mejorar</strong> como desarrollador. Programo proyectos continuamente, a la vez que haciendo retos/challenges para así consolidar y demostrar(me) lo que soy capaz de hacer,
+                        todo esto mientras sigo ampliando conocimientos sobre más tecnologías para aumentar mi <strong>experiencia laboral</strong> y mejorar mi perspectiva y mi experiencia.
                     </p>
                     <p>
-                        En definitiva, todo esto que os cuento es <strong>motivación</strong> por enfrentar nuevos retos buscando soluciones creativas y eficientes. Sé trabajar en equipo, creo poder aportar valor y las demás <strong>soft skills</strong> necesarias espero demostrártelas en nuestro primer encuentro.
+                        En definitiva, todo esto que os cuento es <strong>motivación</strong> por enfrentar nuevos retos y buscar soluciones creativas y eficientes. Sé trabajar en equipo, creo poder aportar valor y las demás <strong>soft skills</strong> necesarias espero demostrároslo en nuestro primer encuentro.
                     </p>
                 </div>
             </div>
