--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -56,23 +56,77 @@
             <div class="technologies mt-5 pt-5 mb-5">
                 <div class="tech-grid">
                     <img src="{% static 'images/tecnologias/python.svg' %}" alt="python">
-                    <img src="{% static 'images/tecnologias/django.svg' %}" alt="django">
                     <img src="{% static 'images/tecnologias/flask.svg' %}" alt="flask">
+                    <img src="{% static 'images/tecnologias/django.svg' %}" alt="django">
+                    <img src="{% static 'images/tecnologias/fastapi.svg' %}" alt="FastAPI">
                     <img src="{% static 'images/tecnologias/html.svg' %}" alt="html">
                     <img src="{% static 'images/tecnologias/css.svg' %}" alt="css">
-                    <img src="{% static 'images/tecnologias/bootstrap.svg' %}" alt="bootstrap">
+                    <img src="{% static 'images/tecnologias/tailwindcss.svg' %}" alt="tailwindcss">
                     <img src="{% static 'images/tecnologias/javascript.svg' %}" alt="javascript">
+                    <img src="{% static 'images/tecnologias/react.svg' %}" alt="react">
+                    <img src="{% static 'images/tecnologias/mongodb.svg' %}" alt="mongodb">
                     <img src="{% static 'images/tecnologias/mysql.svg' %}" alt="mysql">
                     <img src="{% static 'images/tecnologias/postgresql.svg' %}" alt="postgresql">
                     <img src="{% static 'images/tecnologias/sqlite.svg' %}" alt="sqlite">
                     <img src="{% static 'images/tecnologias/git.svg' %}" alt="git">
                     <img src="{% static 'images/tecnologias/github.svg' %}" alt="github">
+                    <img src="{% static 'images/tecnologias/aws.svg' %}" alt="AWS">
                 </div>
             </div>
         </div>
     </section>
 
 
+    <!-- Sección: ÚLTIMOS TRABAJOS -->
+    <section id="ultimos-trabajos" class="py-5 mt-5">
+      <div class="container">
+        <h2 class="text-center russo-one-regular py-3">Últimos Trabajos</h2>
+        <div class="row g-4">
+          <!-- Card Nutridermal AV -->
+          <div class="col-md-4 d-flex">
+            <div class="knowledge-card p-4 d-flex flex-column w-100">
+              <img src="{% static 'images/trabajos/nutridermal.png' %}" alt="Nutridermal AV" class="img-fluid mb-3" style="border-radius: 10px;">
+              <h3 class="russo-one-regular text-danger">Nutridermal AV</h3>
+              <p class="mb-4 flex-grow-1" style="font-size: 1rem; line-height: 1.6;">
+                Desarrollo de una página web profesional para Nutridermal AV, enfocada en ofrecer soluciones innovadoras en el sector de la estética, la dieta y el cuidado de la piel. Enfocado principalmente en el frontend y en el desarrollo de las funciones para su administración.
+              </p>
+              <div class="d-flex justify-content-end mt-auto">
+                <a href="https://www.nutridermal-av.com/" class="btn btn-danger" target="_blank">Landing Page</a>
+              </div>
+            </div>
+          </div>
+          <!-- Card Sunext Designer Dev -->
+          <div class="col-md-4 d-flex">
+            <div class="knowledge-card p-4 d-flex flex-column w-100">
+              <img src="{% static 'images/trabajos/sunextdesigner.png' %}" alt="Sunext Designer Dev" class="img-fluid mb-3" style="border-radius: 10px;">
+              <h3 class="russo-one-regular text-danger">Sunext Designer Dev</h3>
+              <p class="mb-4 flex-grow-1" style="font-size: 1rem; line-height: 1.6;">
+                Creación de una landing page orientada a exponer un portafolio digital de alta calidad correspondiente al mercado de pérgolas dirigida por un conjunto de empresas que conforman EXPALUM, Cristales y Persianas López y GLB.
+              </p>
+              <div class="d-flex justify-content-end mt-auto">
+                <a href="https://www.sunextdesigner.dev/" class="btn btn-danger" target="_blank">Landing Page</a>
+              </div>
+            </div>
+          </div>
+          <!-- Card Dypai -->
+          <div class="col-md-4 d-flex">
+            <div class="knowledge-card p-4 d-flex flex-column w-100">
+              <img src="{% static 'images/trabajos/dypai.png' %}" alt="Dypai" class="img-fluid mb-3" style="border-radius: 10px;">
+              <h3 class="russo-one-regular text-danger">Dypai</h3>
+              <p class="mb-4 flex-grow-1" style="font-size: 1rem; line-height: 1.6;">
+                Implementación de una landing page para Dypai, una plataforma de soluciones tecnológicas avanzadas que consiste principalmente en construir aplicaciones mediante IA. El trabajo elaborado fue tanto de diseño como de implementación de funciones y rutas backend.
+              </p>
+              <div class="d-flex justify-content-end mt-auto">
+                <a href="https://dypai.io/" class="btn btn-danger" target="_blank">Landing Page</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  
+  
+  
     <!-- Sección: SOBRE-MÍ -->
     <section id="sobre-mi" class="py-5 mt-5">
         <div class="container">
@@ -88,8 +142,8 @@
                 <div class="col-md-7 roboto-regular">
                     <h2 class="russo-one-regular text-danger">Sobre mí</h2>
                     <p>
-                        ¡Muy buenas! Presentándose un desarrollador de software con experiencia principalmente en <strong>Python</strong> y sus frameworks <strong>Django, Flask</strong> y (aprendiendo) <strong>FastAPI</strong>, entre otros.
-                        Reconozco que, en principio, mi intención era ser puro backend developer, pero poco a poco me voy familiarizando y cada vez cogiéndole más el gusto a la programación frontend, de ahí que quiera ser <strong>FullStack</strong>.
+                        ¡Muy buenas! Presentándose un desarrollador de software con experiencia principalmente en <strong>Python</strong> y sus frameworks <strong>Flask, Django y FastAPI.</strong>
+                        Reconozco que, en principio, mi intención era ser puro backend developer, pero poco a poco me voy familiarizando y cada vez cogiéndole más el gusto a la programación frontend, especialmente con <strong>React</strong>, de ahí que quiera ser <strong>FullStack</strong>.
                     </p>
                     <p>
                         Actualmente mi enfoque está en mejorar, mejorar y, una vez más, <strong>mejorar</strong> como desarrollador. Programo proyectos continuamente, a la vez que haciendo retos/challenges para así consolidar y demostrar(me) lo que soy capaz de hacer,
@@ -239,13 +293,26 @@
                 <div class="col-md-5 left-card">
                     <div class="knowledge-card">
                         <h3>Experiencia 🪙</h3>
-                        <h4>Software Developer - Abaco Developments</h4>
-                        <p>Abril 2024 - Junio 2024</p>
-                        <ul>
-                            <li>Desarrollo de aplicaciones utilizando Python y FlySpeed SQL.</li>
-                            <li>Optimización de bases de datos y análisis de datos.</li>
-                            <li>Desarrollo de soluciones para mejorar la organización y trabajo en equipo.</li>
-                        </ul>
+                        <div>
+                            <h4>FullStack Developer - DYPAI</h4>
+                            <p>Diciembre 2024 - Febrero 2025</p>
+                            <ul>
+                                <li>Creación, desarrollo y mantenimiento de páginas web y múltiples componentes con React.</li>
+                                <li>Conexión entre el backend y el frontend creando rutas API con Flask o FastAPI y usando MongoDB como BBDD.</li>
+                                <li>Almacenamiento de imágenes en buckets con AWS S3.</li>
+                                <li>Compenetración de tareas y objetivos a través de Notion y manejo de versiones en GitHub con Fork.</li>
+                            </ul>
+                        </div>
+
+                        <div class="mt-4 pt-2">
+                            <h4>Software Developer - Abaco Developments</h4>
+                            <p>Abril 2024 - Junio 2024</p>
+                            <ul>
+                                <li>Desarrollo de aplicaciones utilizando Python y FlySpeed SQL.</li>
+                                <li>Optimización de bases de datos y análisis de datos.</li>
+                                <li>Desarrollo de soluciones para mejorar la organización y trabajo en equipo.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-2 d-flex align-items-center">
@@ -317,10 +384,10 @@
                     <div class="knowledge-card">
                         <h3>Aprendiendo 💡</h3>
                         <div class="tech-grid">
+                            <img src="{% static 'images/tecnologias/docker.svg' %}" alt="Docker">
+                            <img src="{% static 'images/tecnologias/reflex.svg' %}" alt="Reflex">
                             <img src="{% static 'images/tecnologias/csharp.svg' %}" alt="C#">
-                            <img src="{% static 'images/tecnologias/fastapi.svg' %}" alt="FastAPI">
-                            <img src="{% static 'images/tecnologias/svelte.svg' %}" alt="Svelte">
-                            <img src="{% static 'images/tecnologias/aws.svg' %}" alt="AWS">
+                            <img src="{% static 'images/tecnologias/c-plusplus.svg' %}" alt="C++">
                         </div>
                     </div>
                 </div>
