Lavado de cara GENERAL del Portfolio

--- a/myportfolio/templates/projects/backend.html
+++ b/myportfolio/templates/projects/backend.html
@@ -2,6 +2,23 @@
 {% load static %}
 {% block body_block %}
 
+<!--<div class="text-center mt-5">
+            <h3 class="text-light mas-projects">¿Te interesa ver más?</h3>
+            <div class="d-flex justify-content-center gap-5 mt-5">
+                <button class="btn-neon-project backend russo-one-regular">
+                    <span></span><span></span><span></span><span></span>
+                    <a href="{% url 'backend_projects' %}" class="btn-link">Backend</a>
+                </button>
+                <button class="btn-neon-project websites russo-one-regular">
+                    <span></span><span></span><span></span><span></span>
+                    <a href="{% url 'websites_projects' %}" class="btn-link">Websites</a>
+                </button>
+                <button class="btn-neon-project games russo-one-regular">
+                    <span></span><span></span><span></span><span></span>
+                    <a href="{% url 'games_projects' %}" class="btn-link">Games</a>
+                </button>
+            </div>
+        </div>-->
 
 
 {% endblock %}
