--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -7,7 +7,7 @@
     <title>KikolasDEV</title>
    <!-- Bootstrap Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tYt3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- QuillJS Editor -->
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
@@ -59,15 +59,16 @@
         {% endblock %}
     </div>
 
-<!-- Enlace a los archivos JavaScript -->
-<script src="{% static 'js/scroll.js' %}"></script>
-<script src="{% static 'js/editor.js' %}"></script>
-<script src="{% static 'js/typing-name.js' %}"></script>
-<script src="{% static 'js/sobre-mi-nav-link.js' %}"></script>
+    <!-- Enlace a los archivos JavaScript -->
+    <script src="{% static 'js/scroll.js' %}"></script>
+    <script src="{% static 'js/editor.js' %}"></script>
+    <script src="{% static 'js/typing-name.js' %}"></script>
+    <script src="{% static 'js/sobre-mi-nav-link.js' %}"></script>
+    <script src="{% static 'js/projects-filter.js' %}"></script>
 </body>
 
 <footer class="text-center py-4">
-    <div class="container d-flex justify-content-between align-items-center flex-wrap russo-one-regular">
+    <div class="container d-flex justify-content-between align-items-center flex-wrap russo-one-regular footer-inner">
         <!-- Lista de enlaces -->
         <div class="footer-links text-start">
             <ul class="nav">
